syntax = "proto3";

package cart;

option go_package = "douyin-mall/proto/cart";

// 定义购物车服务接口
service CartService {
  rpc AddItem(AddItemReq) returns (AddItemResp) {}     // 添加商品到购物车
  rpc GetCart(GetCartReq) returns (GetCartResp) {}     // 获取购物车信息
  rpc EmptyCart(EmptyCartReq) returns (EmptyCartResp) {} // 清空购物车
}

message CartItem {
  uint32 product_id = 1; // 商品ID
  int32  quantity = 2;   // 商品数量
}

message AddItemReq {
  uint32 user_id = 1;  // 用户ID
  CartItem item = 2;   // 要添加的商品信息
}

message AddItemResp {}

message EmptyCartReq {
  uint32 user_id = 1;  // 要清空的用户ID
}

message GetCartReq {
  uint32 user_id = 1;  // 用户ID
}

message GetCartResp {
  Cart cart = 1;       // 购物车信息
}

message Cart {
  uint32 user_id = 1;           // 用户ID
  repeated CartItem items = 2;   // 购物车商品列表
}

message EmptyCartResp {}
